--- a/package.json
+++ b/package.json
@@ -1,20 +1,9 @@
 {
-    "name": "email_cleaner",
-    "version": "0.0.1",
-    "description": "Posthog app that marks emails as free or ",
-    "main": "index.js",
-    "author": "Gasper Skornik <gasper.skornik@gmail.com>",
-    "license": "MIT",
-    "scripts": {
-      "start": "node index.ts",
-      "test": "node index.ts test",
-      "verbose_test": "node index.ts verbose_test"
-    },
-    "dependencies": {
-      "@posthog/plugin-scaffold": "^1.3.4"
-    },
-    "devDependencies": {
-      "@types/node": "^18.11.18"
-    }
-  }
-  
+  "name": "posthog-email-cleaner",
+  "version": "0.0.1",
+  "description": "A project that cleansup the posthog persons email proeprty after the person is identified and also sets the probability that its an actual person and not a bot",
+  "main": "index.js",
+  "repository": "git@github.com:grapergrape/posthog-email-cleaner.git",
+  "author": "<gasper.skornik@visionect.com>",
+  "license": "MIT"
+}
