--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "posthog-email-cleaner",
   "version": "0.0.1",
-  "description": "A project that cleansup the posthog persons email proeprty after the person is identified and also sets the probability that its an actual person and not a bot",
-  "main": "index.js",
+  "description": "A project that cleans up the posthog persons email property after the person is identified and also sets the probability that it's an actual person and not a bot",
+  "main": "dist/index.js",
   "repository": "git@github.com:grapergrape/posthog-email-cleaner.git",
   "author": "<gasper.skornik@visionect.com>",
+  "license": "MIT",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "test": "ts-node src/index.ts test",
-    "verbose_test": "ts-node src/index.ts verbose_test"
-  }
-
-  ,
-  "license": "MIT",
+    "test": "jest",
+    "build": "tsc"
+  },
   "dependencies": {
     "mailcheck": "^1.1.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/mailcheck": "^1.1.37",
-    "@types/node": "^22.13.8",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.2.2"
   }
 }
